--- a/src/layouts/login/Login__LayoutStyle.css
+++ b/src/layouts/login/Login__LayoutStyle.css
@@ -22,21 +22,23 @@
     display: inherit;
     grid-template-columns: repeat(6, 230px) 250px;
     column-gap: 20px;
-    
-
 }
-.login-content .colash__item:nth-child(1){transform: translateY(-19%);}
-.login-content .colash__item:nth-child(2){transform: translateY(-11%);}
-.login-content .colash__item:nth-child(1){transform: translateY(-19%);}
-.login-content .colash__item:nth-child(3){transform: translateY(-7%);}
 
-.login-content .colash__item:nth-child(5){transform: translateY(-7%);}
-.login-content .colash__item:nth-child(6){transform: translateY(-11%);}
-.login-content .colash__item:nth-child(7){transform: translateY(-19%);}
+.login-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:white;
+    height: 43px;
+}
 
-.login-content .login-colash img{
-    height: 350px;
-    width: 100%;
-    margin-bottom: 20px;
-    border-radius: 16px;
+.login-footer .footer__nav{
+    min-width: 550px;
+    display: flex;
+    justify-content: space-around;
+}
+.login-footer a{
+    text-decoration: none;
+    font-size: 11px;
+    color: black;
 }
