--- a/src/layouts/login/Login__LayoutStyle.css
+++ b/src/layouts/login/Login__LayoutStyle.css
@@ -1,68 +1,131 @@
-.login-header{
-    display: grid;
-    grid-template-columns: 73% 27%;
-    grid-template-rows: 80px;
-    align-items: center;
+::-webkit-scrollbar {
+  display: none;
 }
 
-.login-content{
-    display: grid;
-    grid-template-columns: 1750px;
-    justify-content: center;
-    row-gap: calc(85px * 4.5);
+.login-header {
+  display: grid;
+  grid-template-columns: 73% 27%;
+  grid-template-rows: 80px;
+  align-items: center;
 }
 
-.login-content .content__title{
-    display: inherit;
-    justify-content: center;
-    row-gap: 20px;
+.login-content {
+  display: grid;
+  grid-template-columns: 1750px;
+  justify-content: center;
+  row-gap: calc(85px * 4.5);
 }
 
-.login-content .login-colash{
-    display: inherit;
-    grid-template-columns: repeat(6, 230px) 250px;
-    justify-content: center;
-    column-gap: 20px;
+.login-content .content__title {
+  display: inherit;
+  justify-content: center;
+  row-gap: 20px;
 }
 
-.login-footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background:white;
-    height: 43px;
+.login-content .login-colash {
+  display: inherit;
+  grid-template-columns: repeat(6, 230px) 250px;
+  justify-content: center;
+  column-gap: 20px;
 }
 
-.login-footer .footer__nav{
-    min-width: 550px;
-    display: flex;
-    justify-content: space-around;
+.login-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  height: 43px;
 }
-.login-footer a{
-    text-decoration: none;
-    font-size: 11px;
-    color: black;
+
+.login-footer .footer__nav {
+  min-width: 550px;
+  display: flex;
+  justify-content: space-around;
+}
+.login-footer a {
+  text-decoration: none;
+  font-size: 11px;
+  color: black;
+}
+
+.login-content::after {
+  content: "";
+  width: 100%;
+  height: 130px;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.9)
+  );
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+}
+
+.login-layer {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  pointer-events: none;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 30px;
+}
+
+.login-layer .layer__down {
+  background-color: #0fa573;
+  border-radius: 7px;
+  border: 0;
+  color: white;
+  font-weight: 600;
+  padding: 10px;
+  width: 80px;
+  text-transform: uppercase;
+
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+.login-layer .layer__down.effect {
+  animation-name: layer-button;
+}
+
+@keyframes layer-button {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 @media only screen and (max-width: 1800px) {
-    .login-content .login-colash{
-        grid-template-columns: repeat(6, 200px) 220px;
-    }
+  .login-content .login-colash {
+    grid-template-columns: repeat(6, 200px) 220px;
+  }
 }
 
-
 @media only screen and (max-width: 1600px) {
-    .login-content .login-colash{
-        grid-template-columns: repeat(6, 170px) 190px;
-    }
+  .login-content .login-colash {
+    grid-template-columns: repeat(6, 170px) 190px;
+  }
 }
 
 @media only screen and (max-width: 1400px) {
-    .login-header{
-        grid-template-columns: 68% 32%;
-    }
-    
-    .login-content .login-colash{
-        grid-template-columns: repeat(6, 140px) 160px;
-    }
+  .login-header {
+    grid-template-columns: 68% 32%;
+  }
+
+  .login-content .login-colash {
+    grid-template-columns: repeat(6, 140px) 160px;
+  }
 }
